# itunes2spotify

./: Cargo.toml  LICENSE  README.md
src/: main.rs
src/spotify/: client.rs  error.rs  mod.rs  responses.rs
