[package]
name = "itunes2spotify"
version = "0.1.0"
authors = ["Joe Rozner <joe@deadbytes.net>"]

[dependencies]
plist = "0.0.14"
rocket = "0.1.4"
rocket_codegen = "0.1.4"
serde = "0.8.21"
serde_derive = "0.8.21"
serde_json = "0.8.4"
hyper = "0.9.14"
rustc-serialize = "0.3"
url = "1.2.4"

[dependencies.rocket_contrib]
version = "*"
default-features = false
features = ["json"]
